<resources>
    <string-array name="language_option">
        <item>English</item>
        <item>Russian</item>
    </string-array>
    <string name="facebook_app_id" translatable="false">250707362523649</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb250707362523649</string>
    <string name="item_settings">Settings</string>
    <string name="item_languages">Language</string>
    <string name="item_about">About</string>
    <string name="app_name" translatable="false">Helance</string>
    <string name="user_name">Name</string>
    <string name="user_country">Country</string>
    <string name="login">Login</string>
    <string name="user_login">login</string>
    <string name="user_password">password</string>
    <string name="user_username">username</string>
    <string name="activation_code">code</string>
    <string name="registration">registration</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email or login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_name">This name is invalid</string>
    <string name="error_invalid_login_short">This login is too short</string>
    <string name="error_invalid_login_long">This login is too long</string>
    <string name="error_invalid_password_short">This password is too short</string>
    <string name="error_exist_login">This login is used</string>
    <string name="error_exist_email">This email is used</string>
    <string name="passwordStars" translatable="false">********</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_weak_password">This password is too weak</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="registration_button">Sign up now</string>
    <string name="title_activity_registration">Registration</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_country">Country</string>
    <string name="password">Password</string>
    <string name="apply">Apply</string>
    <string name="login_registration">Login</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="country">Country</string>
    <string name="telephone">Telephone</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="instagram" translatable="false">Instagram</string>
    <string name="country_picker">Click to select your country</string>
    <string name="log_out">Log out</string>
    <string name="choosedWrongCoutry">Choosed wrong country</string>
    <string name="invalidEmailOrPassword">Invalid email or password</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="connect">Connect</string>
    <string name="newPassword">New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="oldPassword">Old Password</string>
    <string name="yourEmail">Your email</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="header">Header</string>
    <string name="enterEmail">Enter email</string>
    <string name="yourCode">Your code</string>
    <string name="code" translatable="false">1234</string>
    <string name="registration_name">Your name</string>
    <string name="registration_surname">Your surname</string>
    <string name="registration_email">Your email</string>
    <string name="registration_textView_name">Type your name:</string>
    <string name="registration_textView_country">Type your country:</string>
    <string name="registration_textView_surname">Type your surname:</string>
    <string name="registration_textView_email">Type your email address:</string>
    <string name="registration_textView_password">Create password:</string>
    <string name="registration_textView_username">Create yor username:</string>
    <string name="registration_textView_login">Create yor login:</string>
    <string name="registration_textView_profile_info">This info will be shown on your profile:</string>
    <string name="registration_textView_activation_code">Enter your activation code:</string>
    <string name="registration_textView_phone_number">Type your phone number:</string>
    <string name="registration_textView_social_networks">Type your social networks:</string>
    <string name="registration_textView_telegram">Telegram:</string>
    <string name="registration_textView_instagram">Instagram:</string>
    <string name="registration_textView_facebook">Facebook:</string>
    <string name="registration_link_telegram">example</string>
    <string name="registration_link_instagram">example</string>
    <string name="registration_link_facebook">example</string>
    <string name="error_password_doesnt_match">This password doesn\'t match</string>
    <string name="error_country_incorrect">Country is not correct</string>
    <string name="task_headline">Headline of your task</string>
    <string name="task_description">Type description of your task</string>
    <string name="type_here">Type here</string>
    <string name="add_files">Add pictures</string>
    <string name="socialNetworkDTOS">Social networks:</string>
    <string name="select_date">Click to set a deadline</string>
    <string name="select_date_below">Select deadline</string>
    <string name="select_lesson">Click to choose a lesson</string>
    <string name="lesson">Lesson</string>
    <string name="select_lesson_below">Select lesson</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>
    <string name="title_activity_settings">Settings</string>
    <string name="projectx" translatable="false">Helance</string>
    <string name="internet_error">Internet connection lost</string>
    <string name="internet_check">Server don`t worked</string>
    <string name="task_price">Type task price</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="settings_language">Language</string>
    <string name="default_language" translatable="false">English</string>
    <string name="settings_receive_notification">Receive notifications</string>
    <string name="settings_receive_email_notifications">Receive email notifications</string>
    <string name="settings_name_button">Apply</string>
    <string name="toolbar_name">Settings</string>
    <string name="category_name">Category</string>
    <string name="description_name">Description of your capabilities</string>
    <string name="save_button">Save</string>
    <string name="edit_resume_toolbar_name">Edit Resume</string>
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="email">Email</string>
    <string name="choose">Choose method</string>
    <string name="tab_item_free_task">Free Task</string>
    <string name="tab_item_my_task">Ready answer</string>
    <string name="tab_item_my_took_task">Took</string>
    <string name="tab_item_my_gave_task">Gave</string>
    <string name="tab_item_my_ready_answer">Ready answer</string>
    <string name="item_nav_resume">Active Resumes</string>
    <string name="item_nav_recom">Recommendation</string>
    <string name="item_nav_tasks">Active Tasks</string>
    <string name="item_nav_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connecting">Connecting…</string>
    <string name="confirm_exit">Confirm exit</string>
    <string name="cancel_creating_task">You want to cancel creating new task?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="creating_task_contractual_price">Contractual price</string>
    <string name="creating_task_task_description_length" translatable="false">150</string>
    <string name="creating_resume_resume_opportunities_length" translatable="false">200</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_with">Login with</string>
    <string name="or">- OR -</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="registration_phone_number" translatable="false">(999) 999–9999</string>
    <string name="contact">Contact</string>
    <string name="item_nav_my_resumes">My resumes</string>
    <string name="item_nav_my_tasks">My tasks</string>
    <string name="item_nav_my_profile">My profile</string>
    <string name="cancel_creating_resume">You want to cancel creating new resume?</string>
    <string name="choose_lesson">Choose lesson</string>
    <string name="cancel_registration">You want to cancel registration?</string>
    <string name="john_snow">John Snow</string>
    <string name="count_of_tasks" translatable="false">0</string>
    <string name="tasks">Tasks</string>
    <string name="count_of_resumes" translatable="false">0</string>
    <string name="resumes">Resumes</string>
    <string name="phone">Phone</string>
    <string name="email_example" translatable="false">example@email.com</string>
    <string name="telegram_example" translatable="false">\@example</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="price">Price</string>
    <string name="update_status">Update status</string>
</resources>