<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondaryLight"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/registration_textView_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/registration_textView_login"
                android:textColor="@color/darkText"
                android:textSize="@dimen/activity_vertical_margin_20"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/registration_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/user_login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                app:layout_constraintTop_toBottomOf="@+id/registration_textView_login" />

            <TextView
                android:id="@+id/registration_textView_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/registration_textView_email"
                android:textColor="@color/darkText"
                android:textSize="@dimen/activity_vertical_margin_20"
                app:layout_constraintTop_toBottomOf="@+id/registration_login" />

            <EditText
                android:id="@+id/registration_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registration_email"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/registration_textView_email" />

            <TextView
                android:id="@+id/registration_textView_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/registration_textView_name"
                android:textColor="@color/darkText"
                android:textSize="@dimen/activity_vertical_margin_20"
                app:layout_constraintTop_toBottomOf="@+id/registration_email" />

            <EditText
                android:id="@+id/register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:digits="QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxcvbnm"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColorHint="@color/textOnPrimary"
                app:layout_constraintTop_toBottomOf="@+id/registration_textView_name"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/registration_textView_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/registration_textView_country"
                android:textColor="@color/darkText"
                android:textSize="@dimen/activity_vertical_margin_20"
                app:layout_constraintTop_toBottomOf="@+id/register_name" />

            <com.hbb20.CountryCodePicker
                android:id="@+id/register_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ccpDialog_showPhoneCode="false"
                app:ccp_defaultNameCode="US"
                app:ccp_showFullName="true"
                app:ccp_showNameCode="false"
                app:ccp_showPhoneCode="false"
                app:ccp_textGravity="LEFT"
                app:layout_constraintTop_toBottomOf="@+id/registration_textView_country" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <Button
            android:id="@+id/registration_button_1"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_rounded_button"
            android:text="@string/next"
            android:textColor="@color/colorSecondaryLight"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>



</LinearLayout>