<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:fillViewport="true"
    android:gravity="center"
    tools:context=".activity.creatingTask.CreatingTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/lesson"
            android:textSize="12sp"
            android:textColor="@color/textOnPrimary"
            android:gravity="bottom"/>

        <TextView
            android:id="@+id/lesson_picker"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/select_lesson"
            android:textSize="18sp"
            android:textColor="@color/textOnPrimary"
            android:layout_marginBottom="8dp"
            android:gravity="bottom"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/task_name"
            android:textSize="12sp"
            android:textColor="@color/textOnPrimary"
            android:gravity="bottom"/>

        <EditText
            android:id="@+id/creating_task_type_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_here"
            android:textSize="18sp"
            android:textColor="@color/textOnPrimary"
            android:gravity="bottom"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/task_description"
            android:textSize="12sp"
            android:textColor="@color/textOnPrimary"
            android:gravity="bottom"/>

        <EditText
            android:id="@+id/creating_task_type_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_here"
            android:textSize="18sp"
            android:textColor="@color/textOnPrimary"
            android:gravity="bottom"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/select_date_below"
            android:textSize="12sp"
            android:textColor="@color/textOnPrimary"
            android:gravity="bottom" />

        <TextView
            android:id="@+id/date_picker"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/select_date"
            android:textSize="18sp"
            android:textColor="@color/textOnPrimary"
            android:layout_marginBottom="8dp"
            android:gravity="bottom"/>

        <Button
            android:id="@+id/choose_image_for_task"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:background="@drawable/add_picture_button_pressed"
            android:text="@string/add_files"
            android:layout_marginBottom="8dp"/>

        <HorizontalScrollView
            android:id="@+id/scroll_view_files"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/linear_layout_files"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:orientation="horizontal"/>

        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/creating_task_button"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/create"
                android:background="@drawable/create_task_button_pressed"
                android:textSize="5pt" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>