<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondaryLight"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/registration_textView_phone_number"
                android:textColor="@color/darkText"
                android:textSize="@dimen/activity_vertical_margin_20"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp" />

            <LinearLayout
                android:id="@+id/registration_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/registration_phone_number_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    tools:layout_editor_absoluteX="0dp" />

                <com.github.reinaldoarrosi.maskededittext.MaskedEditText xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/registration_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:digits="1234567890"
                    android:ems="10"
                    android:hint="@string/registration_phone_number"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/darkText"
                    android:textColorHint="@color/textOnPrimary"
                    app:mask="(999) 999-9999"
                    app:placeholder="_" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/registration_textView_social_networks"
                android:textColor="@color/darkText"
                android:textSize="@dimen/activity_vertical_margin_20"
                app:layout_constraintTop_toBottomOf="@+id/registration_linear"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/registration_textView_telegram"
                android:textColor="@color/darkText"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:layout_editor_absoluteX="5dp" />

            <EditText
                android:id="@+id/registration_telegram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/registration_link_telegram"
                android:maxLines="1"
                android:singleLine="true"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/registration_textView_instagram"
                android:textColor="@color/darkText"
                app:layout_constraintTop_toBottomOf="@+id/registration_telegram"
                tools:layout_editor_absoluteX="0dp" />

            <EditText
                android:id="@+id/registration_instagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/registration_link_instagram"
                android:maxLines="1"
                android:singleLine="true"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/registration_textView_facebook"
                android:textColor="@color/darkText"
                app:layout_constraintTop_toBottomOf="@+id/registration_instagram"
                tools:layout_editor_absoluteX="0dp" />

            <EditText
                android:id="@+id/registration_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/registration_link_facebook"
                android:maxLines="1"
                android:singleLine="true"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                tools:layout_editor_absoluteX="3dp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:id="@+id/registration_button_4"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_rounded_button"
            android:text="@string/next"
            android:textColor="@color/colorSecondaryLight"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp" />

    </LinearLayout>


</LinearLayout>
