<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorSecondaryLight"
    android:padding="@dimen/activity_horizontal_margin" >

    <TextView
        android:id="@+id/edit_profile_password_old_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/oldPassword"
        android:textSize="20sp"
        style="@style/TextView.Primary"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_profile_password_old_TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_password_old_text_view"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordStars"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/edit_profile_password_new_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/newPassword"
        android:textSize="20sp"
        style="@style/TextView.Primary"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_password_old_TextInputLayout" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_profile_password_new_TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_password_new_text_view"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordStars"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/edit_profile_сonfirm_password_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/confirmPassword"
        android:textSize="20sp"
        style="@style/TextView.Primary"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_password_new_TextInputLayout" />

    <EditText
        android:id="@+id/edit_profile_сonfirm_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/passwordStars"
        android:imeActionLabel="@string/action_sign_in_short"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_сonfirm_password_text_view" />

    <Button
        android:id="@+id/registration_button_3"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_rounded_button"
        android:text="@string/save"
        android:textColor="@color/colorSecondaryLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>