<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/colorSecondaryLight"
    android:orientation="vertical"
    tools:context=".activity.passwordRecoveryActivity.PasswordRecovery1">

    <TextView
        android:id="@+id/password_recovery2_activity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourCode"
        android:textSize="20sp"
        style="@style/TextView.Primary"/>

    <EditText
        android:id="@+id/password_recovery2_activity_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/password_recovery2_activity_text_view"
        android:hint="@string/code"
        android:maxLines="1"
        android:singleLine="true"/>

    <Button
        android:id="@+id/password_recovery2_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/next"
        android:textColor="@color/colorSecondaryLight"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>